--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Reserva del Abad</h1>
-<h2>Pisco from Peru to the world.</h2>
+<div class="grapes">
+<br />
+ <div class="page col-10 offset-1 text-center">  
+  <h1>Reserva del Abad</h1>
+  <br />
+  <h2>Pisco from Peru to the world</h2>
+  <br />
+  <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+  <br /><br />
+ </div>
+</div>
