--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <div id="flex-content-container">
       <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,5 +26,24 @@
   </div>
 </nav>
     <%= yield %>
+    
+     </div>
+
+    <div id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+        <b>Contact</b>
+        <br />
+        info@edspiritsco.com
+        <br />
+        20 Enterprise Court #9
+        <br />
+        Napa, CA, 94558
+        </div>
+  
+      </div>
+      </div>
+    </div>
   </body>
 </html>
